# fahbench

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FAHBenchVersion.h  FAHBenchVersion.h.in.in  LICENSE.txt  README.md  StateTests.h  Vagrantfile  astylerc  gpuinfo.cpp  gpuinfo.h  icon.rc  merge_vs_crt.wxs  run_astyle.sh
ci/vagrant/: boost-configure-gcc-4.9.jam  install-fahbench.sh  install-openmm.sh  provision.sh
cmake/: BuildBoost.cmake  Warnings.cmake
doc/: .gitignore  Doxyfile  build-and-install.md  custom-wus.md  details.md  options.md  overview.md  technical-details.md
fahbench/: .gitignore  CMakeLists.txt  CommandLineUpdater.cpp  CommandLineUpdater.h  DLLDefines.h  Device.cpp  Device.h  FAHBench.cpp  FAHBenchVersion.h  FAHBenchVersion.h.in  GPUInfo-CUDA.cpp  GPUInfo-No-CUDA.cpp  GPUInfo-OpenCL.cpp  GPUInfo.cpp  GPUInfo.h  Simulation.cpp  Simulation.h  SimulationResult.cpp  SimulationResult.h  SimulationWorker.cpp  SimulationWorker.h  StateTests.cpp  StateTests.h  Updater.h  Utils.cpp  Utils.h  WorkUnit.cpp  WorkUnit.h  gpuinfo.cpp
fahbench/cmd/: CMakeLists.txt  CommandLineUpdater.cpp  CommandLineUpdater.h  cmd-main.cpp
fahbench/cuda/: CMakeLists.txt  deviceQuery.cpp
fahbench/gui/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  DeviceTableModel.cpp  DeviceTableModel.h  DeviceTableView.cpp  DeviceTableView.h  MainWindow.cpp  MainWindow.h  OneShotButton.cpp  OneShotButton.h  ProgressBar-Linux.cpp  ProgressBar-Win.cpp  ProgressBar.h  QSimulation.h  Resources.qrc  ResultsWidget.cpp  ResultsWidget.h  SimulationTableModel.cpp  SimulationTableModel.h  SimulationTableView.cpp  SimulationTableView.h  SimulationWorker.cpp  SimulationWorker.h  WorkUnitTableModel.cpp  WorkUnitTableModel.h  gui-main.cpp
fahbench/window/: OneShotButton.cpp  window.cpp  window.h
packaging/: .gitignore  Vagrantfile
packaging/travis/: install-fahbench.sh  install-openmm.sh
packaging/vagrant/: install-fahbench.sh  provision.sh
packaging/wix/: .merge_feature.wxs.swp  main.patch.xml  merge_feature.wxs
scratch/: DHFR_INTEGRATOR_IMPLICIT.xml  DHFR_STATE_IMPLICIT.xml  DHFR_SYSTEM_IMPLICIT.xml
window/: OneShotButton.h  window.h
workunits/: CMakeLists.txt  README.md  dhfr-implicit.tar.bz2  dhfr.tar.bz2
workunits/dhfr/: wu.json
workunits/dhfr-implicit/: wu.json
